<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Login">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:id="@+id/space_1"
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/edt_mail_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"/>

        <Space
            android:id="@+id/space_2"
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/edt_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password_text"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"/>

        <Space
            android:id="@+id/space_3"
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_login_text"
            android:textStyle="bold"
            android:backgroundTint="@color/colorAccent"
            android:shadowColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/click_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_sign_in_text"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>