<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FeatureData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_portrait_data"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@android:drawable/picture_frame" />

        <Space
            android:id="@+id/spaceV_1"
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Space
            android:id="@+id/spaceV_2"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_text"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/spaceH_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_type_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_data_text"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_type_data"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_type_data"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@android:drawable/picture_frame" />

        </LinearLayout>

        <Space
            android:id="@+id/spaceV_3"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stars_text"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/spaceH_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_team_stars_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="teamStarsData"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_team_stars_Data"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/img_team_stars_Data"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@android:drawable/picture_frame" />

            <TextView
                android:id="@+id/backslash_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:text="/"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_all_stars_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_stars_data_text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_all_stars_data"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/img_all_stars_data"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@android:drawable/picture_frame" />

        </LinearLayout>

        <Space
            android:id="@+id/spaceV_4"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power_text"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/spaceH_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_team_power_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/team_power_data_text"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_all_power_data"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/backslash_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:text="/"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_all_power_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_power_data_text"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_all_stars_data"
                app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>

        <Space
            android:id="@+id/spaceV_5"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>